[package]
name = "value"
version = "0.1.0"
edition = "2024"

[dependencies]
pinocchio = { version = "0.10.2", features = ["copy", "cpi"] }
pinocchio-system = "0.5.0"
solana-address = { version = "2.4.0", features = ["curve25519"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
