[package]
name = "value"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { version = "0.10.2", features = ["copy", "cpi"] }
pinocchio-system = "0.5.0"
solana-address = { version = "2.4.0", features = ["curve25519"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
litesvm = "0.10.0"
mollusk-svm = "0.11.0"
solana-account = "3.4.0"
solana-client = "3.1.11"
solana-instruction = "3.3.0"
solana-keypair = "3.1.2"
solana-message = "3.1.0"
solana-pubkey = { version = "4.1.0", features = ["curve25519"] }
solana-signer = "3.0.0"
solana-system-interface = "3.1.0"
solana-transaction = "3.1.0"
